--- a/views/admin/addProduct.ejs
+++ b/views/admin/addProduct.ejs
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Add Product</title>
   <link rel="stylesheet" href="/css/admin/addProduct.css">
 </head>
-<body>
+  <%- include("../partials/header", { pageTitle : "Add Product" }) %>
 
   <div class="container">
     <h1>Add New Product</h1>
@@ -20,13 +18,15 @@
       <!-- Product Price -->
       <div class="form-group">
         <label for="productPrice">Product Price</label>
-        <input type="number" id="productPrice" name="productPrice" placeholder="Enter product price" min="0" step="0.01" required>
+        <input type="number" id="productPrice" name="productPrice" placeholder="Enter product price" min="0" step="0.01"
+          required>
       </div>
 
       <!-- Product Quantity -->
       <div class="form-group">
         <label for="productQuantity">Product Quantity</label>
-        <input type="number" id="productQuantity" name="productQuantity" placeholder="Enter product quantity" min="0" required>
+        <input type="number" id="productQuantity" name="productQuantity" placeholder="Enter product quantity" min="0"
+          required>
       </div>
 
       <!-- Image URL -->
@@ -40,5 +40,6 @@
     </form>
   </div>
 
-</body>
+  </body>
+
 </html>
