--- a/views/productList.ejs
+++ b/views/productList.ejs
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Product List</title>
   <link rel="stylesheet" href="/css/product.css">
 </head>
-<body>
+  <%- include("partials/header", { pageTitle : "shop" }) %>
   <div class="container">
     <h1>Product List</h1>
     <div class="product-list">
       <div class="product-item">
-        <img src="https://images.pexels.com/photos/2587370/pexels-photo-2587370.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Product 1" class="product-image">
+        <img src="https://images.pexels.com/photos/2587370/pexels-photo-2587370.jpeg?auto=compress&cs=tinysrgb&w=800"
+          alt="Product 1" class="product-image">
         <div class="product-info">
           <h2 class="product-name">Product 1</h2>
           <p class="product-price">$99.99</p>
@@ -21,7 +20,8 @@
       </div>
 
       <div class="product-item">
-        <img src="https://images.pexels.com/photos/2587370/pexels-photo-2587370.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Product 2" class="product-image">
+        <img src="https://images.pexels.com/photos/2587370/pexels-photo-2587370.jpeg?auto=compress&cs=tinysrgb&w=800"
+          alt="Product 2" class="product-image">
         <div class="product-info">
           <h2 class="product-name">Product 2</h2>
           <p class="product-price">$149.99</p>
@@ -31,7 +31,8 @@
       </div>
 
       <div class="product-item">
-        <img src="https://images.pexels.com/photos/2587370/pexels-photo-2587370.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Product 3" class="product-image">
+        <img src="https://images.pexels.com/photos/2587370/pexels-photo-2587370.jpeg?auto=compress&cs=tinysrgb&w=800"
+          alt="Product 3" class="product-image">
         <div class="product-info">
           <h2 class="product-name">Product 3</h2>
           <p class="product-price">$199.99</p>
@@ -41,7 +42,8 @@
       </div>
 
       <div class="product-item">
-        <img src="https://images.pexels.com/photos/2587370/pexels-photo-2587370.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Product 4" class="product-image">
+        <img src="https://images.pexels.com/photos/2587370/pexels-photo-2587370.jpeg?auto=compress&cs=tinysrgb&w=800"
+          alt="Product 4" class="product-image">
         <div class="product-info">
           <h2 class="product-name">Product 4</h2>
           <p class="product-price">$249.99</p>
@@ -51,6 +53,6 @@
       </div>
     </div>
   </div>
+  </body>
 
-</body>
 </html>
